tests/baselines/reference/declInput.errors.txt
tests/cases/compiler/declInput.ts(1,11): error TS2518: Only an ambient class can be merged with an interface.
tests/cases/compiler/declInput.ts(5,7): error TS2518: Only an ambient class can be merged with an interface.


==== tests/cases/compiler/declInput.ts (2 errors) ====
    interface bar {
              ~~~
!!! error TS2518: Only an ambient class can be merged with an interface.
    
    }
    
    class bar {
          ~~~
!!! error TS2518: Only an ambient class can be merged with an interface.
      public f() { return ''; }
      public g() { return {a: <bar>null, b: undefined, c: void 4 }; }
      public h(x = 4, y = null, z = '') { x++; }
    }
    